[package]
name = "dyl-compiler"
version = "0.1.0"
authors = ["Sasha Pourcelot <sasha.pourcelot@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyl-bytecode = { path = "../dyl-bytecode" }
anyhow = "1.0"
nom = { version = "6.1", default-features = false, features = ["std"] }