[package]
name = "dyl-frontend"
version = "0.1.0"
authors = ["Sasha Pourcelot <sasha.pourcelot@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dyl-compiler = { path = "../dyl-compiler" }
dyl-vm = { path = "../dyl-vm" }